[project]
name = "comfyui-yallm-node"
description = "Yet another set of LLM nodes for ComfyUI. This one only supports OpenAI-like APIs, but of course can be used with local LLM providers such as llama.cpp, ollama and LMStudio, among others."
version = "1.1.0"
license = {file = "LICENSE.txt"}
dependencies = [
    "openai",
    "pydantic",
    "pyyaml"
]

[project.urls]
Repository = "https://github.com/asaddi/ComfyUI-YALLM-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "asaddi"
DisplayName = "ComfyUI-YALLM-node"
Icon = ""

[tool.bumpversion]
current_version = "1.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = true
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = "-S"
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
